--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,14 @@ img {
   height: 100%;
 }
 
-.imgs-left img {
+.imgs-left {
   height: 500px;
+  width: 100%;
   object-fit: cover;
+  position: absolute;
+  top:0;
+  left:0;
+  opacity: 0;
 }
 .imgs-right img {
   object-fit: cover;
@@ -77,9 +82,10 @@ img {
     right: 20px;
     width: 80%;
     text-align: end;
+    opacity: 0;
 }
 
-.opacityzero{
+.opacityuno{
     opacity: 1;
 }
 
