--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@
   display: flex;
 }
 
-.container-img-left{
-    position: relative;
+.container-img-left {
+  position: relative;
 }
 
 .col-9 {
@@ -47,13 +47,11 @@ img {
   width: 100%;
   object-fit: cover;
   position: absolute;
-  top:0;
-  left:0;
-  opacity: 0;
+  top: 0;
+  left: 0;
 }
 .imgs-right img {
   object-fit: cover;
-  opacity:0.8;
   height: 100%;
 }
 
@@ -67,38 +65,37 @@ img {
 
 .fa-chevron-circle-up-custom {
   top: 5px;
-  transform: translate(-50% , 0);
+  transform: translate(-50%, 0);
 }
 
 .fa-chevron-circle-down-custom {
   bottom: 5px;
-  transform: translate(-50% , 0) rotate(180deg);
+  transform: translate(-50%, 0) rotate(180deg);
 }
 
-.text{
-    position: absolute;
-    color: white;
-    bottom: 5%;
-    right: 20px;
-    width: 80%;
-    text-align: end;
-    opacity: 0;
+.text {
+  position: absolute;
+  color: white;
+  bottom: 5%;
+  right: 20px;
+  width: 80%;
+  text-align: end;
 }
 
-.opacityuno{
-    opacity: 1;
+.container-img {
+  opacity: 0;
 }
 
-.overlay{
-    content :"";
-    position: absolute;
-    top:0;
-    left:0;
-    border:3px solid rgb(49, 49, 49);
-    height: 100%;
-    width: 100%;
+.opacityuno {
+  opacity: 1;
 }
 
-
-
-
+.overlay {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 3px solid rgb(49, 49, 49);
+  height: 100%;
+  width: 100%;
+}
