--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,10 @@ img {
   height: 100%;
 }
 
+.select-overlay{
+  opacity: 0.8;
+}
+
 .fa-chevron-circle-up {
   position: absolute;
   color: white;
@@ -91,11 +95,6 @@ img {
 }
 
 .overlay {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 3px solid rgb(49, 49, 49);
-  height: 100%;
-  width: 100%;
+  border: 4px solid rgb(94, 94, 94);
+  opacity: 1;
 }
